[gd_scene load_steps=7 format=3 uid="uid://omdyx710vqe5"]

[ext_resource type="Script" path="res://Player/Player.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://bx3o6sx2gtqy8" path="res://Assets/Images/crosshair-simple-icon-2048x2048-mhp9vhh5.png" id="2_gfgrk"]
[ext_resource type="AudioStream" uid="uid://cuvc1xo1j53sc" path="res://Assets/Vystavka Techno 10.02.2018 (320 kbps).mp3" id="3_ydujb"]

[sub_resource type="CapsuleMesh" id="1"]
height = 1.85

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1eswu"]

[sub_resource type="CylinderShape3D" id="3"]
height = 1.5

[node name="Player" type="CharacterBody3D" groups=["Player"]]
collision_layer = 2
script = ExtResource("1")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, -0.00045383, 0, 0.00045383, 1, 0, 0, 0)
shape = SubResource("CapsuleShape3D_1eswu")

[node name="Feet" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.65, 0)
shape = SubResource("3")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.908342, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.325343, -0.399836)
cull_mask = 1048573
current = true
fov = 90.0

[node name="GrappleCast" type="RayCast3D" parent="Head/Camera3D"]
target_position = Vector3(0, 0, -30)

[node name="TextureRect" type="TextureRect" parent="Head/Camera3D"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -11.0
offset_right = 10.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_gfgrk")
expand_mode = 1

[node name="SubViewportContainer" type="SubViewportContainer" parent="Head/Camera3D"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="SubViewport" type="SubViewport" parent="Head/Camera3D/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1280, 720)
render_target_update_mode = 4

[node name="GroundCheck" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.25, 0)
target_position = Vector3(0, -0.1, 0)

[node name="WallCheckChest" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
target_position = Vector3(0, 0, -0.6)

[node name="HeadRays" type="Node3D" parent="."]

[node name="WallCheckHead" type="RayCast3D" parent="HeadRays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
target_position = Vector3(0, 0, -1)

[node name="WallCheckHead2" type="RayCast3D" parent="HeadRays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 1, 0)
target_position = Vector3(0, 0, -1)

[node name="WallCheckHead3" type="RayCast3D" parent="HeadRays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 1, 0)
target_position = Vector3(0, 0, -1)

[node name="WallCheckHead4" type="RayCast3D" parent="HeadRays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
target_position = Vector3(0, 2, -1.3)

[node name="WallCheckHead5" type="RayCast3D" parent="HeadRays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4, 1, 0)
target_position = Vector3(0, 2, -1.3)

[node name="WallCheckHead6" type="RayCast3D" parent="HeadRays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.4, 1, 0)
target_position = Vector3(0, 2, -1.3)

[node name="SprintTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="WallRunTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="JumpBufferTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="JumpCayoteTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="HeadBumperCast" type="RayCast3D" parent="."]
target_position = Vector3(0, 1.5, 0)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ydujb")
autoplay = true

[connection signal="child_entered_tree" from="." to="." method="_on_child_entered_tree"]
[connection signal="timeout" from="SprintTimer" to="." method="_on_SprintTimer_timeout"]
[connection signal="timeout" from="WallRunTimer" to="." method="_on_WallRunTimer_timeout"]
[connection signal="timeout" from="JumpCayoteTimer" to="." method="_on_JumpCayoteTimer_timeout"]
